ignoring two old files for comparison

--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+# old files for testing
+pvsystemprofiler/latitude_study2.py
+pvsystemprofiler/tilt_azimuth_study2.py
