--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,39 @@ jobs:
           name: Push to PyPI
           command: sudo twine upload -u $PYPI_USERNAME -p $PYPI_PASSWORD dist/*
 
+  deploy-conda:
+    <<: *368_config
+    steps:
+      - checkout
+      - run:
+          name: Install the Conda Dependencies
+          command: |
+            wget https://repo.anaconda.com/miniconda/Miniconda3-4.7.10-Linux-x86_64.sh -O miniconda.sh
+            bash miniconda.sh -b -p "$HOME"/miniconda
+            source /home/circleci/miniconda/etc/profile.d/conda.sh
+            conda activate base
+            conda config --set always_yes yes --set auto_update_conda false
+            conda update conda
+            conda install conda-build
+
+      - run:
+          name: Build the Anaconda Package
+          command: |
+            source /home/circleci/miniconda/etc/profile.d/conda.sh
+            conda activate base
+            conda install anaconda-client
+            conda config --set anaconda_upload no
+            anaconda login --username $ANACONDA_CLOUD_USERNAME --password $ANACONDA_CLOUD_PASSWORD
+            VERSION_FROM_GIT_TAG=`git tag --list "v*[0-9]" --sort=version:refname | tail -1 | cut -c 2-` conda build . -c conda-forge --numpy 1.16.4
+
+      - run:
+          name: Get the output path and upload the package
+          command: |
+            source /home/circleci/miniconda/etc/profile.d/conda.sh
+            conda activate base
+            VERSION_FROM_GIT_TAG=`git tag --list "v*[0-9]" --sort=version:refname | tail -1 | cut -c 2-`
+            anaconda upload -u slacgismo  /home/circleci/miniconda/conda-bld/noarch/solar-data-tools-$VERSION_FROM_GIT_TAG-*.tar.bz2
+
 
 workflows:
   version: 2
@@ -48,6 +81,14 @@ workflows:
             tags:
               only: /.*/
       - deploy-pypi:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v\d+\.\d+\.\d+$/
+            branches:
+              ignore: /.*/
+      - deploy-conda:
           requires:
             - build
           filters:
